--- a/visualization.html
+++ b/visualization.html
@@ -49,8 +49,8 @@
           //    BEGINNING OF CODE CHANGES
           //
           //  Step 1: We want this.state.data to contain data from the server API
-          //  '/get_data' endpoint. Make a call out to the endpoint and set
-          //  the value rn state to the result
+          //  '/get_data' endpoint. Make a call to the endpoint and set
+          //  the value in state to the result
           // *********************************
 
           fetch('....')
