--- a/visualization.html
+++ b/visualization.html
@@ -66,6 +66,8 @@
         constructData() {
           const { resultLimit, data } = this.state;
 
+          console.log('Constructing data:', data);
+
           //*********************************
           //    BEGINNING OF CODE CHANGES
 
